--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -53,7 +53,7 @@ body,
   margin-right: 40px;
 }
 
-svg {
+.svg-button {
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -93,10 +93,16 @@ button {
 }
 
 
-.auth-image {
-  background-size: cover;
+.auth-image-wrapper {
   width: 40%;
   height: 100vh;
+  background-size: cover;
+}
+
+.auth-image {
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .top-buttons {
