--- a/frontend/src/css/markets.css
+++ b/frontend/src/css/markets.css
@@ -24,3 +24,13 @@
     justify-content: space-between;
     border-bottom: solid 1px black;
 }
+
+
+.stock{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.stock::before {
+    content: '$';
+}
